--- a/style.css
+++ b/style.css
@@ -6,17 +6,20 @@ html {
         width: 100%;
         height: 50%;
         }
+        h1 {
+            color:rgb(218, 104, 104);
+            font-size: 350%;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
     section {
         display: flex;
         justify-content: space-around;
         margin: auto;
+        background-color: rgb(177, 179, 179);
     }
     article {
-        background-color: rgb(103, 153, 219);
         display: flex;
-        flex-direction: column;
-        
-
+        flex-direction: column;  
         }
         
         p {
@@ -33,4 +36,16 @@ html {
     }
 #messageBox {
     padding: 30pt;
+}
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+.centered {
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
