--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ html {
         }
         
     header{
+        display: flex;
+        margin: auto;
         width: 100%;
-        height: 50%;
+        max-width: 1500pt;
         }
         h1 {
             color:rgb(218, 104, 104);
